src/styles/components/Collapse.scss
.collapse {
    width: 100%;

    .header {
        display: flex;
        justify-content: space-between;       
        align-items: center;
        
        background-color: var(--color-primary);
        color: white;
        border-radius: 10px;       
        height: 52px;
        vertical-align: center;
        padding: 10px;

        
        @media screen and (max-width: 480px) {
            height: 30px;
        }

        .label {                 

            @media screen and (max-width: 480px) {
                font-size: 13px;
                line-height: 18px;  
            }
        }          
    }

    .content {
        padding: 20px;
        text-align: justify;
        font-size: 18px;
        font-weight: 400;
        line-height: 25px;

        @media screen and (max-width: 480px) {            
            font-size: 12px;
            line-height: 17px;
        }

    }
}

